# webcam-recorder-widget

./: .gitignore  README.md  example.ipynb  pyproject.toml
src/webcam_recorder/: __init__.py
src/webcam_recorder/static/: widget.css  widget.js
